Sutter Health/src/objects/SHP_Product__c.object
<CustomObject>
    <fields>
        <fullName>Coinsurance__c</fullName>
        <label>Coinsurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOPM__c</fullName>
        <label>OOPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PCP__c</fullName>
        <label>PCP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan(SHP)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ML01 - LG Standard $10 - $500</fullName>
                </value>
                <value>
                    <fullName>ML02 - LG Standard $20 - $500 (Rx $100)</fullName>
                </value>
                <value>
                    <fullName>ML03 - LG Standard $20 - $1000</fullName>
                </value>
                <value>
                    <fullName>ML04 - LG Standard $30 - $1000 (Rx $100)</fullName>
                </value>
                <value>
                    <fullName>ML05 - LG Standard $30 - $1000 (Rx $250)</fullName>
                </value>
                <value>
                    <fullName>ML06 - LG Standard $20 - $1500</fullName>
                </value>
                <value>
                    <fullName>ML07 - LG Standard $40 - $1500</fullName>
                </value>
                <value>
                    <fullName>ML08 - LG Standard $20 - $2000</fullName>
                </value>
                <value>
                    <fullName>ML09 - LG Standard $40 - $2500</fullName>
                </value>
                <value>
                    <fullName>ML10 - LG Standard $40 - $3000</fullName>
                </value>
                <value>
                    <fullName>ML11 - LG Coinsurance 10% - $250</fullName>
                </value>
                <value>
                    <fullName>ML12 - LG Coinsurance 20% - $500</fullName>
                </value>
                <value>
                    <fullName>ML13 - LG Coinsurance 30% - $500</fullName>
                </value>
                <value>
                    <fullName>ML14 - LG Coinsurance 20% - $1000</fullName>
                </value>
                <value>
                    <fullName>ML15 - LG Coinsurance 30% - $1000</fullName>
                </value>
                <value>
                    <fullName>ML16 - LG Split $10/$20 - $250</fullName>
                </value>
                <value>
                    <fullName>ML17 - LG Split $10/$20 - $500</fullName>
                </value>
                <value>
                    <fullName>ML18 - LG Split $20/$40 - $500</fullName>
                </value>
                <value>
                    <fullName>ML19 - LG HSP $10 - $250 - 10%</fullName>
                </value>
                <value>
                    <fullName>ML20 - LG HSP $20 - $500 - 10%</fullName>
                </value>
                <value>
                    <fullName>ML21 - LG HSP $20 - $1000 - 20%</fullName>
                </value>
                <value>
                    <fullName>ML22 - LG HSP $20 - $1500 - 20%</fullName>
                </value>
                <value>
                    <fullName>ML23 - LG HSP $20 - $1500 - 30%</fullName>
                </value>
                <value>
                    <fullName>ML24 - LG HSP $20 - $2500 - 20%</fullName>
                </value>
                <value>
                    <fullName>ML25 - LG HSP $20 - $3000 - 30%</fullName>
                </value>
                <value>
                    <fullName>HL01 / HL51 - LG HDHP $20 - $1500 (HSA Eligible)</fullName>
                </value>
                <value>
                    <fullName>HL02 / HL52 - LG HDHP $40 - $2500 (HSA Eligible)</fullName>
                </value>
                <value>
                    <fullName>HL03 / HL53 - LG HDHP 10% - $1500 (HSA Eligible)</fullName>
                </value>
                <value>
                    <fullName>HL04 / HL54 - LG HDHP 20% - $2500 (HSA Eligible)</fullName>
                </value>
                <value>
                    <fullName>ML30 - LG Standard $10 - $0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RX_Deductible__c</fullName>
        <label>RX Deductible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_1__c</fullName>
        <label>RX Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_2__c</fullName>
        <label>RX Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_3__c</fullName>
        <label>RX Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPC__c</fullName>
        <label>SPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>SHP Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Coinsurance__c</columns>
        <columns>Deductible__c</columns>
        <columns>OOPM__c</columns>
        <columns>PCP__c</columns>
        <columns>SPC__c</columns>
        <columns>RX_Deductible__c</columns>
        <columns>RX_Tier_1__c</columns>
        <columns>RX_Tier_2__c</columns>
        <columns>RX_Tier_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SHP Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SHP Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>